Robot.createScreenCapture() crashes in wayland mode

XMLWordPrintable

    • b04
    • linux

        Our customer has reported that jdownloader crashes in wayland mode.

        https://bugzilla.redhat.com/show_bug.cgi?id=1402819

        My investigation suggests that it is due to incompatible nature of wayland vs. X11.

        Due to security concern, wayland does not allow snapshot screen. As the result, XGetImage() can return NULL.

        A simple NULL checks can avoid the crash.

              Assignee:
              Krishna Addepalli
              Reporter:
              Zhengyu Gu
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

                Created:
                Updated:
                Resolved: