8171000: Robot.createScreenCapture() crashes in wayland mode

Reviewed-by: serb, mhalder